intro alignment fixes

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -31,8 +31,12 @@
 
     gap: calc(1 * var(--std-unit));
 
+    text-align: center;
+
     @media (min-aspect-ratio: 1/1) {
       align-items: start;
+
+      text-align: left;
     }
   }
 }
